# bone-klod

./: Cargo.toml  README.md  todo.txt
.github/workflows/: release.yaml
assets/: debug.klodlvl  default.klodlvl  old_default.klodlvl
scripts/: build_artifacts.sh  generate_ogg.sh  upload_artifacts.sh  wasm_build.sh
src/: animate.rs  audio.rs  ball.rs  box_scene.rs  cam.rs  editor.rs  game_audio.rs  main.rs  powers.rs  prefabs.rs  scene.rs  score.rs  state.rs
src/ball/: anim.rs
src/editor/: trans.rs
src/scene/: migration.rs
src/ui/: common.rs  main_menu.rs  mod.rs
