[package]
name = "klod"
version = "0.1.0"
edition = "2021"
exclude = ["assets"]
license = "Apache-2.0"

[features]
dynamic = ["bevy/dynamic"]
editor = [
    "debug",
    "bevy_transform_gizmo",
    "bevy_editor_pls",
    "bevy_mod_picking",
    "bevy_editor_pls_default_windows",
    "bevy-scene-hook",
]
debug = ["bevy-inspector-egui", "bevy-inspector-egui-rapier", "bevy-debug-text-overlay/debug"]
default = ["dynamic", "debug"]

[dependencies]
anyhow = "1"
bevy-debug-text-overlay = { version = "3.0", default-features = false, features = ["builtin-font"] }
bevy-scene-hook = { version = "4.0" , optional = true }
bevy-ui-navigation = "0.20"
bevy = { version = "0.8", default-features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "jpeg",
    "x11",
] }
bevy_kira_audio = "0.12"
bevy_rapier3d = "0.16"
bevy-ui-build-macros = "0.4.0"
bevy_mod_picking = { version = "0.9", optional = true }
bevy-inspector-egui = { version = "0.12", optional = true}
bevy-inspector-egui-rapier = { version = "0.5", features = ["rapier3d"], optional = true }
bevy_editor_pls = { version = "0.1", optional = true }

fastrand = "1.8"
serde = "1"
ron = "0.7"
enum-map = "2.4"
arrayvec = "0.7"

[dependencies.bevy_transform_gizmo]
version = "0.3.0"
optional = true
git = "https://github.com/nicopap/bevy_transform_gizmo.git"
branch = "klod-custom"

[dependencies.bevy_editor_pls_default_windows]
version = "0.1"
optional = true
git = "https://github.com/nicopap/bevy_editor_pls.git"
branch = "klod-custom"

[patch.crates-io.bevy_editor_pls]
git = "https://github.com/nicopap/bevy_editor_pls.git"
branch = "klod-custom"

[patch.crates-io.bevy_editor_pls_default_windows]
git = "https://github.com/nicopap/bevy_editor_pls.git"
branch = "klod-custom"

[patch.crates-io.bevy-inspector-egui-rapier]
git = "https://github.com/nicopap/bevy-inspector-egui.git"
branch = "update-rapier"

[patch.crates-io.bevy_rapier3d]
git = "https://github.com/nicopap/bevy_rapier.git"
branch = "expose-debug-lines"


[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"

